--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clipboard": "^2.0.6",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.22.1",
     "vue-router": "^3.2.0",
     "vue-sun-ui": "^0.1.2"
   },
